RESOLVED FIXED46681
Fix possible illegal float values in AudioParam
https://bugs.webkit.org/show_bug.cgi?id=46681
Summary Fix possible illegal float values in AudioParam
Chris Rogers
Reported 2010-09-27 17:25:40 PDT
Fix possible illegal float values in AudioParam
Attachments
Patch (1.27 KB, patch)
2010-09-27 17:27 PDT, Chris Rogers
no flags
Chris Rogers
Comment 1 2010-09-27 17:27:54 PDT
Kenneth Russell
Comment 2 2010-09-28 08:06:25 PDT
Comment on attachment 68997 [details] Patch Looks OK. I wonder about the spec text indicating that an exception is raised if the value is outside the min and max values, and about whether the value should be set to 0.0 if NaN or +/-Inf come in.
Chris Rogers
Comment 3 2010-09-28 10:09:33 PDT
I think ultimately we'll want to raise an exception (but not set the value to 0). But for now, this is much better protection than we previously had.
WebKit Commit Bot
Comment 4 2010-09-28 10:31:42 PDT
Comment on attachment 68997 [details] Patch Clearing flags on attachment: 68997 Committed r68535: <http://trac.webkit.org/changeset/68535>
WebKit Commit Bot
Comment 5 2010-09-28 10:31:48 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.