2010-09-28  Chris Rogers  <crogers@google.com>

Reviewed by Kenneth Russell.

        Fix possible illegal float values in AudioParam
        https://bugs.webkit.org/show_bug.cgi?id=46681

        No new tests since audio API is not yet implemented.

        * webaudio/AudioParam.h:
        (WebCore::AudioParam::setValue):

Canonical link: https://commits.webkit.org/59222@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68535 268f45cc-cd09-0410-ab3c-d52691b4dbfc